--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="header-border">
-      <header class="header">
+      <header class="header container">
         <a class="logo logo--top" href="/WebStudio"
           ><span class="logo__secondary-color">Web</span>Studio</a
         >
@@ -662,8 +662,10 @@
                 </span></label
               >
             </li>
+            <li class="modal__submit-flex">
+              <button class="modal__submit" type="submit">Wyślij</button>
+            </li>
           </ul>
-          <button class="modal__submit" type="submit">Wyślij</button>
         </form>
       </div>
     </div>
