--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="header-border">
-      <header class="header">
+      <header class="header container">
         <a class="logo logo--top" href="/WebStudio"
           ><span class="logo__secondary--color">Web</span>Studio</a
         >
